--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "swiper": "^11.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-   "start": "set PORT=3006 && react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
