--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newkindredapp",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,13 @@
     "antd": "^5.19.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "swiper": "^6.8.4",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3006 && react-scripts start",
+    "start": "set PORT=3005 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
