--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.19.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.14",
